--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-streamlit
-string
-random
-pickle
-io
-os
-json
-wave
-numpy 
-speech_recognition
-speech
-speech_v1
-
-
+streamlit==0.70.0
+google-cloud-speech==1.33.0
+speechRecognition==3.8.1
+pipwin==0.5.0
+pyaudio==0.2.11
